# gpumon

./: .gitignore  .travis.yml  ChangeLog  LICENSE  Makefile  README.md  _oasis  _tags  gpumon.opam  myocamlbuild.ml  setup.ml
.github/workflows/: main.yml
gpumon/: dune  gpumon.ml  gpumon_server.ml
lib/: config.ml  config.mli  dune  gpumon_config.ml  gpumon_config.mli  gpumon_libs.mldylib  gpumon_libs.mllib  gpumon_result.ml  libgpumon_libs_stubs.clib  nvml.ml  nvml_stubs.c
mocks/: mock.ml
scripts/: init.d-rrdd-gpumon
src/: OMakefile  nvml.ml  nvml_stubs.c
stubs/: dune  nvml_stubs.c
test/: dune  test_config.ml  test_main.ml
test/data/: test_unknown_version.conf  test_v1_default.conf  test_v2_default.conf  test_v2_default_with_match.conf  test_v2_minimal.conf  test_v2_mixed.conf  test_v2_with_subsystem_device_id.conf
