opam-version: "2.0"
maintainer: "xen-api@lists.xen.org"
authors: [ "John Else" ]
homepage: "https://github.com/xenserver/gpumon"
bug-reports: "https://github.com/xenserver/gpumon/issues"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "base-threads"     
  "ounit"
  "result"
  "rrdd-plugin"
  "stdext"
  "xcp"
]
dev-repo: "git://github.com/xenserver/gpumon"
synopsis: "The XenServer GPU monitoring daemon"



