opam-version: "2.0"
synopsis: "The XenServer GPU monitoring daemon"
maintainer: "xen-api@lists.xen.org"
authors: "John Else"
homepage: "https://github.com/xenserver/gpumon"
bug-reports: "https://github.com/xenserver/gpumon/issues"
depends: [
  "base-threads"
  "ounit" {with-test}
  "rresult"
  "rrdd-plugin"
  "xapi-idl"
  "xapi-stdext-pervasives"
  "xapi-stdext-unix"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git://github.com/xenserver/gpumon"
